--- a/Nhom7_CuaHangPhuKienDienThoai/CuaHangPhuKienDienThoai/DTO/DTO.csproj
+++ b/Nhom7_CuaHangPhuKienDienThoai/CuaHangPhuKienDienThoai/DTO/DTO.csproj
@@ -42,9 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChiTietHoaDonDTO.cs" />
+    <Compile Include="ChiTietPN_DTO.cs" />
     <Compile Include="DanhMucDTO.cs" />
     <Compile Include="HoaDonDTO.cs" />
     <Compile Include="KhachHangDTO.cs" />
+    <Compile Include="NhaCungCapDTO.cs" />
+    <Compile Include="PhieuNhapDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SanPhamDTO.cs" />
   </ItemGroup>
