--- a/Nhom7_CuaHangPhuKienDienThoai/CuaHangPhuKienDienThoai/BLL/BLL.csproj
+++ b/Nhom7_CuaHangPhuKienDienThoai/CuaHangPhuKienDienThoai/BLL/BLL.csproj
@@ -42,8 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChiTietHoaDonBLL.cs" />
+    <Compile Include="CHITIETPN_BLL.cs" />
     <Compile Include="HoaDonBLL.cs" />
     <Compile Include="KhachHangBLL.cs" />
+    <Compile Include="NhaCungCapBLL.cs" />
+    <Compile Include="PhieuNhapBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SanPhamBLL.cs" />
   </ItemGroup>
