--- a/Nhom7_CuaHangPhuKienDienThoai/CuaHangPhuKienDienThoai/GUI/GUI.csproj
+++ b/Nhom7_CuaHangPhuKienDienThoai/CuaHangPhuKienDienThoai/GUI/GUI.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmDetailSP.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDetailSP.Designer.cs">
+      <DependentUpon>frmDetailSP.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +66,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmDetailSP.resx">
+      <DependentUpon>frmDetailSP.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
