--- a/Nhom7_CuaHangPhuKienDienThoai/CuaHangPhuKienDienThoai/DAL/DAL.csproj
+++ b/Nhom7_CuaHangPhuKienDienThoai/CuaHangPhuKienDienThoai/DAL/DAL.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChiTietHoaDonDAL.cs" />
+    <Compile Include="ChiTietSanPhamDAL.cs" />
     <Compile Include="HoaDonDAL.cs" />
     <Compile Include="KhachHangDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
