Chi tiet danh muc, chi tiet san pham

--- a/Nhom7_CuaHangPhuKienDienThoai/CuaHangPhuKienDienThoai/BLL/BLL.csproj
+++ b/Nhom7_CuaHangPhuKienDienThoai/CuaHangPhuKienDienThoai/BLL/BLL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="ChiTietHoaDonBLL.cs" />
     <Compile Include="CHITIETPN_BLL.cs" />
+    <Compile Include="DanhMucDLL.cs" />
     <Compile Include="HoaDonBLL.cs" />
     <Compile Include="KhachHangBLL.cs" />
     <Compile Include="NhaCungCapBLL.cs" />
