--- a/Nhom7_CuaHangPhuKienDienThoai/CuaHangPhuKienDienThoai/BLL/BLL.csproj
+++ b/Nhom7_CuaHangPhuKienDienThoai/CuaHangPhuKienDienThoai/BLL/BLL.csproj
@@ -47,6 +47,7 @@
     <Compile Include="HoaDonBLL.cs" />
     <Compile Include="KhachHangBLL.cs" />
     <Compile Include="NhaCungCapBLL.cs" />
+    <Compile Include="NhanVienBLL.cs" />
     <Compile Include="PhieuNhapBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SanPhamBLL.cs" />
