--- a/Nhom7_CuaHangPhuKienDienThoai/CuaHangPhuKienDienThoai/DTO/DTO.csproj
+++ b/Nhom7_CuaHangPhuKienDienThoai/CuaHangPhuKienDienThoai/DTO/DTO.csproj
@@ -47,6 +47,7 @@
     <Compile Include="HoaDonDTO.cs" />
     <Compile Include="KhachHangDTO.cs" />
     <Compile Include="NhaCungCapDTO.cs" />
+    <Compile Include="NhanVienDTO.cs" />
     <Compile Include="PhieuNhapDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SanPhamDTO.cs" />
